Folders restructured. Build and dummy test is working

--- a/solver/CMakeLists.txt
+++ b/solver/CMakeLists.txt
@@ -6,8 +6,11 @@ target_include_directories(solver
     PUBLIC 
     include)
 
-add_executable(solverTest test/test-main.cpp)
-target_link_libraries(solverTest Catch)
+add_executable(solverTest 
+    test/test-main.cpp
+	test/solverTest.cpp)
+target_link_libraries(solverTest Catch
+    solver)
 
 enable_testing()
 add_test(NAME solverTest COMMAND solverTest)
