just compiling but no implementation and tests are passing

--- a/solver/CMakeLists.txt
+++ b/solver/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_library(solver
-    SHARED
-    src/solver.cpp include/particle.h)
+    src/solver.cpp include/particle.h include/particleBuilder.h src/particleBuilder.cpp)
 
 target_include_directories(solver 
     PUBLIC 
