--- a/solver/CMakeLists.txt
+++ b/solver/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(solver
-    src/solver.cpp include/particle.h include/particleBuilder.h src/particleBuilder.cpp)
+    src/solver.cpp include/particle.h include/particleBuilder.h src/particleBuilder.cpp include/types.h)
 
 target_include_directories(solver 
     PUBLIC 
