All euler tests are passing

--- a/solver/CMakeLists.txt
+++ b/solver/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_library(solver
-    src/solver.cpp include/particle.h include/particleBuilder.h src/particleBuilder.cpp include/types.h src/types.cpp)
+        src/solver.cpp
+        include/particle.h
+        include/particleBuilder.h
+        src/particleBuilder.cpp
+        include/types.h
+        src/types.cpp
+        src/particle.cpp)
 
 target_include_directories(solver 
     PUBLIC 
