solver is using pstl to parallelize std::transform

--- a/solver/CMakeLists.txt
+++ b/solver/CMakeLists.txt
@@ -6,6 +6,13 @@ add_library(solver
         include/types.h
         src/particle.cpp)
 
-target_include_directories(solver 
-    PUBLIC 
-    include)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extern/tbb")
+
+find_package(TBB REQUIRED)
+target_include_directories(solver
+        PUBLIC
+        include
+        ${TBB_INCLUDE_DIRS})
+
+target_link_libraries(solver
+        ${TBB_LIBRARIES})
