Solver connected and works

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -13,4 +13,4 @@ target_include_directories(app
         include)
 
 target_compile_definitions(app PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(app PRIVATE Qt5::Core Qt5::Quick)
+target_link_libraries(app PRIVATE Qt5::Core Qt5::Quick solver)
